added footer for mobile view + created directory for pictures

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 		<main>
 			<div class="landing">
 				<header>
-					<img class="logo" src="./logo.png" alt="logo" />
+					<img class="logo" src="./assets/logo.png" alt="logo" />
 
 					<nav>
 						<div class="rightSide">
@@ -93,7 +93,10 @@
 				<div class="redText">
 					<h1>Ny och fräsch webbplats</h1>
 				</div>
-				<img src="./undraw_accept_tasks_po1c.png" alt="website" />
+				<img
+					src="./assets/undraw_accept_tasks_po1c.png"
+					alt="website"
+				/>
 			</div>
 		</main>
 		<section class="nyheter">
@@ -104,7 +107,7 @@
 			<ul class="newsList">
 				<li>
 					<img class="listImg"
-					src="./kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
+					src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
 					alt="waiter">
 					<h3 class="articleHeader"
 						>Förlängt serveringstillstånd på uteserveringar</h3
@@ -122,7 +125,7 @@
 				</li>
 				<li>
 					<img class="listImg"
-					src="./marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
+					src="./assets/marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
 					alt="waiter">
 					<h3 class="articleHeader">Balansera mera</h3>
 					<p class="articleBody"
@@ -136,7 +139,8 @@
 				</li>
 				<li>
 					<img class="listImg"
-					src="./cdc-F98Mv9O6LfI-unsplash.jpg"/ alt="waiter">
+					src="./assets/cdc-F98Mv9O6LfI-unsplash.jpg"/
+					alt="waiter">
 					<h3 class="articleHeader">Besöksförbudet avslutas</h3>
 					<p class="articleBody"
 						>På Borås Stads vård- och omsorgsboenden och
@@ -161,7 +165,7 @@
 				<li class="calendarItem">
 					<img
 						class="listImg"
-						src="./kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
 					/>
 					<p class="redBadge"> 3 okt </p>
 					<h3 class="itemHeader"
@@ -185,15 +189,13 @@
 						Borås Bio Röda kvarn
 					</p>
 				</li>
-                <li class="calendarItem">
+				<li class="calendarItem">
 					<img
 						class="listImg"
-						src="./kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
 					/>
 					<p class="redBadge"> 4 okt </p>
-					<h3 class="itemHeader"
-						>Film: Livets bästa år
-					</h3>
+					<h3 class="itemHeader">Film: Livets bästa år </h3>
 					<p>
 						<b>
 							<i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -212,10 +214,10 @@
 						Borås Bio Röda kvarn
 					</p>
 				</li>
-                <li class="calendarItem">
+				<li class="calendarItem">
 					<img
 						class="listImg"
-						src="./kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
 					/>
 					<p class="redBadge"> 5 okt </p>
 					<h3 class="itemHeader"
@@ -239,18 +241,64 @@
 						Textile Fashion Center eller online
 					</p>
 				</li>
-            </ul>
-            <div class="btnHolder">
+			</ul>
+			<div class="btnHolder">
 				<button> Till Kalendern </button>
 			</div>
-        </section>
-        <footer>
-            <div class="footerHeader">
-                <img src="./logo.png" alt="logo" />
-                <h1>Borås stad</h1>
-            </div>
-            
-        </footer>
+		</section>
+		<footer>
+			<div class="footerHeader">
+				<img src="./assets/logo.png" alt="logo" />
+				<h1>Borås stad</h1>
+				<div class="footerTop">
+					<ul>
+						<li
+							><b>Telefon</b> <br />
+							<p>Växel: 033-35 70 00</p></li
+						>
+						<li
+							><b>Öppetider</b><br />
+							<p
+								>Måndag–torsdag: <br> 7.30–17.00 <br />
+								Fredag: 07.30-16.00</p
+							>
+						</li>
+						<li>Öppettider vid helger <br>
+                            Journummer när växeln är stängd</li>
+						<li><b>E-post</b><br> <p>boras.stad@boras.se</p></li>
+                        <li><b>Postadress</b> <br> Borås Stad <br> 501 80 Borås</li>
+                        <li><b>Besök oss:</b> <br> Stadshuset: Kungsgatan 55</li>
+                        <li>Kontaktinformation till våra verksamheter</li>
+                        <li>Karta</li>
+                    </ul>
+                    <ul>
+                        <li class="footerIcon"><b>Borås Stad u sociala medier</b> <br>
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </li>
+                        <li>Våra verksamheter på sociala medier</li>
+                        <li><b>Ingångssidor :</b> <br> 
+                            <a href="">För press och media</a>
+                            <a href="">För förtroendevalda</a>
+                            <a href="">För anställda</a>
+                        </li>
+                        <li>
+                            <b>Webbplatsen och personuppgifter</b> <br>
+                            <a href="">Om webbplatsen</a><br>
+                            <a href="">Tillgänglighet på webbplatsen</a><br>
+                            <a href="">Hantering av personuppgifter</a>
+                        </li>
+                        <li>Lämna synpunkt eller felanmälan</li>
+                        <li><b>Organisationsnummer</b> <br>
+                        212000-1561
+                        </li>
+                    </ul>
+				</div>
+			</div>
+		</footer>
 	</body>
 	<script src="https://use.fontawesome.com/febc262783.js"></script>
 	<script>
