added media queries for tablets view

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Document</title>
-		<link rel="stylesheet" type="text/css" href="home.css" />
+		<link rel="stylesheet" type="text/css" href="./sass/home.css" />
 	</head>
 	<body>
 		<main>
@@ -40,7 +40,7 @@
 				</header>
 				<div class="present">
 					<div class="left">
-						<h1> Borås stad <hr /> </h1>
+						<h1 class="title"> Borås stad <hr /> </h1>
 
 						<p
 							>På denna webbplats får du information om
@@ -100,13 +100,13 @@
 			</div>
 		</main>
 		<section class="nyheter">
-			<h1>
+			<h1 class="title">
 				<i class="fa fa-newspaper-o" aria-hidden="true"></i>
 				Nyheter <hr
 			/></h1>
 			<ul class="newsList">
 				<li>
-					<img class="listImg"
+					<img
 					src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
 					alt="waiter">
 					<h3 class="articleHeader"
@@ -124,7 +124,7 @@
 					>
 				</li>
 				<li>
-					<img class="listImg"
+					<img
 					src="./assets/marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
 					alt="waiter">
 					<h3 class="articleHeader">Balansera mera</h3>
@@ -138,7 +138,7 @@
 					>
 				</li>
 				<li>
-					<img class="listImg"
+					<img 
 					src="./assets/cdc-F98Mv9O6LfI-unsplash.jpg"/
 					alt="waiter">
 					<h3 class="articleHeader">Besöksförbudet avslutas</h3>
@@ -157,15 +157,14 @@
 			</div>
 		</section>
 		<section class="calendar nyheter">
-			<h1>
+			<h1 class="title">
 				<i class="fa fa-calendar" aria-hidden="true"></i> Kalendar
 				<hr
 			/></h1>
 			<ul class="calendarItems">
-				<li class="calendarItem">
+				<li >
 					<img
-						class="listImg"
-						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+						src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
 					/>
 					<p class="redBadge"> 3 okt </p>
 					<h3 class="itemHeader"
@@ -189,10 +188,9 @@
 						Borås Bio Röda kvarn
 					</p>
 				</li>
-				<li class="calendarItem">
+				<li >
 					<img
-						class="listImg"
-						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+						src="./assets/myke-simon-atsUqIm3wxo-unsplash.jpg"
 					/>
 					<p class="redBadge"> 4 okt </p>
 					<h3 class="itemHeader">Film: Livets bästa år </h3>
@@ -214,10 +212,9 @@
 						Borås Bio Röda kvarn
 					</p>
 				</li>
-				<li class="calendarItem">
-					<img
-						class="listImg"
-						src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"
+				<li >
+					<img 
+						src="./assets/you-x-ventures-Oalh2MojUuk-unsplash.jpg"
 					/>
 					<p class="redBadge"> 5 okt </p>
 					<h3 class="itemHeader"
@@ -248,7 +245,7 @@
 		</section>
 		<footer>
 			<div class="footerHeader">
-				<img src="./assets/logo.png" alt="logo" />
+				<img class="logo" src="./assets/logo.png" alt="logo" />
 				<h1>Borås stad</h1>
 				<div class="footerTop">
 					<ul>
