small fixes for the tablets view

--- a/home.html
+++ b/home.html
@@ -150,6 +150,24 @@
 					<p class="articleDetail"
 						>Publicerad den 29 september 2020</p
 					>
+                </li>
+                <li>
+					<img
+					src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
+					alt="waiter">
+					<h3 class="articleHeader"
+						>Förlängt serveringstillstånd på uteserveringar</h3
+					>
+					<p class="articleBody"
+						>Under coronapandemin har många verksamheter fått en
+						snabb nedgång av antalet gäster. För att om möjligt
+						lindra de negativa effekterna som virusets spridning
+						har på verksamheterna i Borås, beslutade Miljö- och
+						konsumentnämnden igår att du som red...</p
+					>
+					<p class="articleDetail"
+						>Publicerad den 30 september 2020</p
+					>
 				</li>
 			</ul>
 			<div class="btnHolder">
@@ -236,6 +254,32 @@
 							Plats:</b
 						>
 						Textile Fashion Center eller online
+					</p>
+                </li>
+                <li >
+					<img
+						src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
+					/>
+					<p class="redBadge"> 3 okt </p>
+					<h3 class="itemHeader"
+						>Barnmatiné: Ella Bella Bingo
+					</h3>
+					<p>
+						<b>
+							<i class="fa fa-clock-o" aria-hidden="true"></i>
+							Tid:</b
+						>
+						3 oktober kl. 13.30
+					</p>
+					<p
+						><b
+							><i
+								class="fa fa-map-marker"
+								aria-hidden="true"
+							></i>
+							Plats:</b
+						>
+						Borås Bio Röda kvarn
 					</p>
 				</li>
 			</ul>
