--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<main>
-			<div class="landing">
+			
 				<header>
 					<img class="logo" src="./assets/logo.png" alt="logo" />
 
@@ -37,8 +37,8 @@
 							<li>Kommun & politik</li>
 						</ul>
 					</nav>
-				</header>
-				<div class="present">
+                </header>
+                <div class="landing">
 					<div class="left">
 						<h1 class="title"> Borås stad <hr /> </h1>
 
@@ -87,206 +87,211 @@
 							>
 						</ul>
 					</div>
-				</div>
-			</div>
-			<div class="illustration">
-				<div class="redText">
-					<h1>Ny och fräsch webbplats</h1>
-				</div>
-				<img
-					src="./assets/undraw_accept_tasks_po1c.png"
-					alt="website"
-				/>
+
+					<div class="illustration">
+						<div class="redText">
+							<h1>Ny och fräsch webbplats</h1>
+						</div>
+						<div class="img">
+                            <img
+							src="./assets/undraw_accept_tasks_po1c.png"
+							alt="website"
+						/>
+                        </div>
+					</div>
+				
 			</div>
 		</main>
-		<section class="nyheter">
-			<h1 class="title">
-				<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-				Nyheter <hr
-			/></h1>
-			<ul class="newsList">
-				<li>
-					<img
-					src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
-					alt="waiter">
-					<h3 class="articleHeader"
-						>Förlängt serveringstillstånd på uteserveringar</h3
-					>
-					<p class="articleBody"
-						>Under coronapandemin har många verksamheter fått en
-						snabb nedgång av antalet gäster. För att om möjligt
-						lindra de negativa effekterna som virusets spridning
-						har på verksamheterna i Borås, beslutade Miljö- och
-						konsumentnämnden igår att du som red...</p
-					>
-					<p class="articleDetail"
-						>Publicerad den 30 september 2020</p
-					>
-				</li>
-				<li>
-					<img
-					src="./assets/marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
-					alt="waiter">
-					<h3 class="articleHeader">Balansera mera</h3>
-					<p class="articleBody"
-						>Fallolyckor är den olyckstyp som leder till att
-						flest människor dör, läggs in på sjukhus för vård
-						och besöker akutmottagningar varje år.</p
-					>
-					<p class="articleDetail"
-						>Publicerad den 30 september 2020</p
-					>
-				</li>
-				<li>
-					<img 
-					src="./assets/cdc-F98Mv9O6LfI-unsplash.jpg"/
-					alt="waiter">
-					<h3 class="articleHeader">Besöksförbudet avslutas</h3>
-					<p class="articleBody"
-						>På Borås Stads vård- och omsorgsboenden och
-						korttidsenheter är man glada över att regeringen har
-						upphävt besöksförbudet från den 1 oktober.</p
-					>
-					<p class="articleDetail"
-						>Publicerad den 29 september 2020</p
-					>
-                </li>
-                <li>
-					<img
-					src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
-					alt="waiter">
-					<h3 class="articleHeader"
-						>Förlängt serveringstillstånd på uteserveringar</h3
-					>
-					<p class="articleBody"
-						>Under coronapandemin har många verksamheter fått en
-						snabb nedgång av antalet gäster. För att om möjligt
-						lindra de negativa effekterna som virusets spridning
-						har på verksamheterna i Borås, beslutade Miljö- och
-						konsumentnämnden igår att du som red...</p
-					>
-					<p class="articleDetail"
-						>Publicerad den 30 september 2020</p
-					>
-				</li>
-			</ul>
-			<div class="btnHolder">
-				<button> Till alla nyheter </button>
-			</div>
-		</section>
-		<section class="calendar nyheter">
-			<h1 class="title">
-				<i class="fa fa-calendar" aria-hidden="true"></i> Kalendar
-				<hr
-			/></h1>
-			<ul class="calendarItems">
-				<li >
-					<img
-						src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
-					/>
-					<p class="redBadge"> 3 okt </p>
-					<h3 class="itemHeader"
-						>Barnmatiné: Ella Bella Bingo
-					</h3>
-					<p>
-						<b>
-							<i class="fa fa-clock-o" aria-hidden="true"></i>
-							Tid:</b
-						>
-						3 oktober kl. 13.30
-					</p>
-					<p
-						><b
-							><i
-								class="fa fa-map-marker"
-								aria-hidden="true"
-							></i>
-							Plats:</b
-						>
-						Borås Bio Röda kvarn
-					</p>
-				</li>
-				<li >
-					<img
-						src="./assets/myke-simon-atsUqIm3wxo-unsplash.jpg"
-					/>
-					<p class="redBadge"> 4 okt </p>
-					<h3 class="itemHeader">Film: Livets bästa år </h3>
-					<p>
-						<b>
-							<i class="fa fa-clock-o" aria-hidden="true"></i>
-							Tid:</b
-						>
-						4 oktober kl. 16.00
-					</p>
-					<p
-						><b
-							><i
-								class="fa fa-map-marker"
-								aria-hidden="true"
-							></i>
-							Plats:</b
-						>
-						Borås Bio Röda kvarn
-					</p>
-				</li>
-				<li >
-					<img 
-						src="./assets/you-x-ventures-Oalh2MojUuk-unsplash.jpg"
-					/>
-					<p class="redBadge"> 5 okt </p>
-					<h3 class="itemHeader"
-						>Kan vi skapa en innovativ byråkrati?
-					</h3>
-					<p>
-						<b>
-							<i class="fa fa-clock-o" aria-hidden="true"></i>
-							Tid:</b
-						>
-						3 oktober kl. 09.00
-					</p>
-					<p
-						><b
-							><i
-								class="fa fa-map-marker"
-								aria-hidden="true"
-							></i>
-							Plats:</b
-						>
-						Textile Fashion Center eller online
-					</p>
-                </li>
-                <li >
-					<img
-						src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
-					/>
-					<p class="redBadge"> 3 okt </p>
-					<h3 class="itemHeader"
-						>Barnmatiné: Ella Bella Bingo
-					</h3>
-					<p>
-						<b>
-							<i class="fa fa-clock-o" aria-hidden="true"></i>
-							Tid:</b
-						>
-						3 oktober kl. 13.30
-					</p>
-					<p
-						><b
-							><i
-								class="fa fa-map-marker"
-								aria-hidden="true"
-							></i>
-							Plats:</b
-						>
-						Borås Bio Röda kvarn
-					</p>
-				</li>
-			</ul>
-			<div class="btnHolder">
-				<button> Till Kalendern </button>
-			</div>
-		</section>
+        
+        <div class="mainContent">
+            <section class="nyheter">
+                <h1 class="title">
+                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                    Nyheter <hr
+                /></h1>
+                <ul class="newsList">
+                    <li>
+                        <img
+                        src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
+                        alt="waiter">
+                        <h3 class="articleHeader"
+                            >Förlängt serveringstillstånd på uteserveringar</h3
+                        >
+                        <p class="articleBody"
+                            >Under coronapandemin har många verksamheter fått en
+                            snabb nedgång av antalet gäster. För att om möjligt
+                            lindra de negativa effekterna som virusets spridning
+                            har på verksamheterna i Borås, beslutade Miljö- och
+                            konsumentnämnden igår att du som red...</p
+                        >
+                        <p class="articleDetail"
+                            >Publicerad den 30 september 2020</p
+                        >
+                    </li>
+                    <li>
+                        <img
+                        src="./assets/marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
+                        alt="waiter">
+                        <h3 class="articleHeader">Balansera mera</h3>
+                        <p class="articleBody"
+                            >Fallolyckor är den olyckstyp som leder till att
+                            flest människor dör, läggs in på sjukhus för vård
+                            och besöker akutmottagningar varje år.</p
+                        >
+                        <p class="articleDetail"
+                            >Publicerad den 30 september 2020</p
+                        >
+                    </li>
+                    <li>
+                        <img src="./assets/cdc-F98Mv9O6LfI-unsplash.jpg"/
+                        alt="waiter">
+                        <h3 class="articleHeader">Besöksförbudet avslutas</h3>
+                        <p class="articleBody"
+                            >På Borås Stads vård- och omsorgsboenden och
+                            korttidsenheter är man glada över att regeringen har
+                            upphävt besöksförbudet från den 1 oktober.</p
+                        >
+                        <p class="articleDetail"
+                            >Publicerad den 29 september 2020</p
+                        >
+                    </li>
+                    <li>
+                        <img
+                        src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
+                        alt="waiter">
+                        <h3 class="articleHeader"
+                            >Förlängt serveringstillstånd på uteserveringar</h3
+                        >
+                        <p class="articleBody"
+                            >Under coronapandemin har många verksamheter fått en
+                            snabb nedgång av antalet gäster. För att om möjligt
+                            lindra de negativa effekterna som virusets spridning
+                            har på verksamheterna i Borås, beslutade Miljö- och
+                            konsumentnämnden igår att du som red...</p
+                        >
+                        <p class="articleDetail"
+                            >Publicerad den 30 september 2020</p
+                        >
+                    </li>
+                </ul>
+                <div class="btnHolder">
+                    <button> Till alla nyheter </button>
+                </div>
+            </section>
+            <section class="calendar nyheter">
+                <h1 class="title">
+                    <i class="fa fa-calendar" aria-hidden="true"></i> Kalendar
+                    <hr
+                /></h1>
+                <ul class="calendarItems">
+                    <li>
+                        <img
+                            src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
+                        />
+                        <p class="redBadge"> 3 okt </p>
+                        <h3 class="itemHeader"
+                            >Barnmatiné: Ella Bella Bingo
+                        </h3>
+                        <p>
+                            <b>
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                Tid:</b
+                            >
+                            3 oktober kl. 13.30
+                        </p>
+                        <p
+                            ><b
+                                ><i
+                                    class="fa fa-map-marker"
+                                    aria-hidden="true"
+                                ></i>
+                                Plats:</b
+                            >
+                            Borås Bio Röda kvarn
+                        </p>
+                    </li>
+                    <li>
+                        <img
+                            src="./assets/myke-simon-atsUqIm3wxo-unsplash.jpg"
+                        />
+                        <p class="redBadge"> 4 okt </p>
+                        <h3 class="itemHeader">Film: Livets bästa år </h3>
+                        <p>
+                            <b>
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                Tid:</b
+                            >
+                            4 oktober kl. 16.00
+                        </p>
+                        <p
+                            ><b
+                                ><i
+                                    class="fa fa-map-marker"
+                                    aria-hidden="true"
+                                ></i>
+                                Plats:</b
+                            >
+                            Borås Bio Röda kvarn
+                        </p>
+                    </li>
+                    <li>
+                        <img
+                            src="./assets/you-x-ventures-Oalh2MojUuk-unsplash.jpg"
+                        />
+                        <p class="redBadge"> 5 okt </p>
+                        <h3 class="itemHeader"
+                            >Kan vi skapa en innovativ byråkrati?
+                        </h3>
+                        <p>
+                            <b>
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                Tid:</b
+                            >
+                            3 oktober kl. 09.00
+                        </p>
+                        <p
+                            ><b
+                                ><i
+                                    class="fa fa-map-marker"
+                                    aria-hidden="true"
+                                ></i>
+                                Plats:</b
+                            >
+                            Textile Fashion Center eller online
+                        </p>
+                    </li>
+                    <li>
+                        <img
+                            src="./assets/anna-samoylova-w55SpMmoPgE-unsplash.jpg"
+                        />
+                        <p class="redBadge"> 3 okt </p>
+                        <h3 class="itemHeader"
+                            >Barnmatiné: Ella Bella Bingo
+                        </h3>
+                        <p>
+                            <b>
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                Tid:</b
+                            >
+                            3 oktober kl. 13.30
+                        </p>
+                        <p
+                            ><b
+                                ><i
+                                    class="fa fa-map-marker"
+                                    aria-hidden="true"
+                                ></i>
+                                Plats:</b
+                            >
+                            Borås Bio Röda kvarn
+                        </p>
+                    </li>
+                </ul>
+                <div class="btnHolder">
+                    <button> Till Kalendern </button>
+                </div>
+            </section>
+        </div>
 		<footer>
 			<div class="footerHeader">
 				<img class="logo" src="./assets/logo.png" alt="logo" />
@@ -300,43 +305,63 @@
 						<li
 							><b>Öppetider</b><br />
 							<p
-								>Måndag–torsdag: <br> 7.30–17.00 <br />
+								>Måndag–torsdag: <br />
+								7.30–17.00 <br />
 								Fredag: 07.30-16.00</p
 							>
 						</li>
-						<li>Öppettider vid helger <br>
-                            Journummer när växeln är stängd</li>
-						<li><b>E-post</b><br> <p>boras.stad@boras.se</p></li>
-                        <li><b>Postadress</b> <br> Borås Stad <br> 501 80 Borås</li>
-                        <li><b>Besök oss:</b> <br> Stadshuset: Kungsgatan 55</li>
-                        <li>Kontaktinformation till våra verksamheter</li>
-                        <li>Karta</li>
-                    </ul>
-                    <ul>
-                        <li class="footerIcon"><b>Borås Stad u sociala medier</b> <br>
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        </li>
-                        <li>Våra verksamheter på sociala medier</li>
-                        <li><b>Ingångssidor :</b> <br> 
-                            <a href="">För press och media</a>
-                            <a href="">För förtroendevalda</a>
-                            <a href="">För anställda</a>
-                        </li>
-                        <li>
-                            <b>Webbplatsen och personuppgifter</b> <br>
-                            <a href="">Om webbplatsen</a><br>
-                            <a href="">Tillgänglighet på webbplatsen</a><br>
-                            <a href="">Hantering av personuppgifter</a>
-                        </li>
-                        <li>Lämna synpunkt eller felanmälan</li>
-                        <li><b>Organisationsnummer</b> <br>
-                        212000-1561
-                        </li>
-                    </ul>
+						<li
+							>Öppettider vid helger <br />
+							Journummer när växeln är stängd</li
+						>
+						<li
+							><b>E-post</b><br />
+							<p>boras.stad@boras.se</p></li
+						>
+						<li
+							><b>Postadress</b> <br />
+							Borås Stad <br />
+							501 80 Borås</li
+						>
+						<li
+							><b>Besök oss:</b> <br />
+							Stadshuset: Kungsgatan 55</li
+						>
+						<li>Kontaktinformation till våra verksamheter</li>
+						<li>Karta</li>
+					</ul>
+					<ul>
+						<li class="footerIcon"
+							><b>Borås Stad u sociala medier</b> <br />
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<i
+								class="fa fa-instagram"
+								aria-hidden="true"
+							></i>
+							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<i class="fa fa-linkedin" aria-hidden="true"></i>
+						</li>
+						<li>Våra verksamheter på sociala medier</li>
+						<li
+							><b>Ingångssidor :</b> <br />
+							<a href="">För press och media</a>
+							<a href="">För förtroendevalda</a>
+							<a href="">För anställda</a>
+						</li>
+						<li>
+							<b>Webbplatsen och personuppgifter</b> <br />
+							<a href="">Om webbplatsen</a><br />
+							<a href="">Tillgänglighet på webbplatsen</a
+							><br />
+							<a href="">Hantering av personuppgifter</a>
+						</li>
+						<li>Lämna synpunkt eller felanmälan</li>
+						<li
+							><b>Organisationsnummer</b> <br />
+							212000-1561
+						</li>
+					</ul>
 				</div>
 			</div>
 		</footer>
