finished laptop look

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 					<img class="logo" src="./assets/logo.png" alt="logo" />
 
 					<nav>
-						<div class="rightSide">
+						<div class="rightNav">
 							<input
 								type="text"
 								name="search"
@@ -39,7 +39,7 @@
 					</nav>
                 </header>
                 <div class="landing">
-					<div class="left">
+					<div class="redLeft">
 						<h1 class="title"> Borås stad <hr /> </h1>
 
 						<p
@@ -103,6 +103,7 @@
 			</div>
 		</main>
         
+     <div class="content">
         <div class="mainContent">
             <section class="nyheter">
                 <h1 class="title">
@@ -114,37 +115,42 @@
                         <img
                         src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
                         alt="waiter">
+                      <div class="articleContent">
                         <h3 class="articleHeader"
-                            >Förlängt serveringstillstånd på uteserveringar</h3
-                        >
-                        <p class="articleBody"
-                            >Under coronapandemin har många verksamheter fått en
-                            snabb nedgång av antalet gäster. För att om möjligt
-                            lindra de negativa effekterna som virusets spridning
-                            har på verksamheterna i Borås, beslutade Miljö- och
-                            konsumentnämnden igår att du som red...</p
-                        >
-                        <p class="articleDetail"
-                            >Publicerad den 30 september 2020</p
-                        >
+                        >Förlängt serveringstillstånd på uteserveringar</h3
+                    >
+                    <p class="articleBody"
+                        >Under coronapandemin har många verksamheter fått en
+                        snabb nedgång av antalet gäster. För att om möjligt
+                        lindra de negativa effekterna som virusets spridning
+                        har på verksamheterna i Borås, beslutade Miljö- och
+                        konsumentnämnden igår att du som red...</p
+                    >
+                    <p class="articleDetail"
+                        >Publicerad den 30 september 2020</p
+                    >
+                      </div>
                     </li>
                     <li>
                         <img
                         src="./assets/marisa-howenstine-nFsOlSE9Mn8-unsplash.jpg"/
                         alt="waiter">
-                        <h3 class="articleHeader">Balansera mera</h3>
-                        <p class="articleBody"
-                            >Fallolyckor är den olyckstyp som leder till att
-                            flest människor dör, läggs in på sjukhus för vård
-                            och besöker akutmottagningar varje år.</p
-                        >
-                        <p class="articleDetail"
-                            >Publicerad den 30 september 2020</p
-                        >
+                        <div class="articleContent">
+                            <h3 class="articleHeader">Balansera mera</h3>
+                            <p class="articleBody"
+                                >Fallolyckor är den olyckstyp som leder till att
+                                flest människor dör, läggs in på sjukhus för vård
+                                och besöker akutmottagningar varje år.</p
+                            >
+                            <p class="articleDetail"
+                                >Publicerad den 30 september 2020</p
+                            >
+                        </div>
                     </li>
                     <li>
                         <img src="./assets/cdc-F98Mv9O6LfI-unsplash.jpg"/
                         alt="waiter">
+                      <div class="articleContent">
                         <h3 class="articleHeader">Besöksförbudet avslutas</h3>
                         <p class="articleBody"
                             >På Borås Stads vård- och omsorgsboenden och
@@ -154,24 +160,27 @@
                         <p class="articleDetail"
                             >Publicerad den 29 september 2020</p
                         >
+                      </div>
                     </li>
                     <li>
                         <img
                         src="./assets/kate-townsend-hEC6zxdFF0M-unsplash.jpg"/
                         alt="waiter">
+                     <div class="articleContent">
                         <h3 class="articleHeader"
-                            >Förlängt serveringstillstånd på uteserveringar</h3
-                        >
-                        <p class="articleBody"
-                            >Under coronapandemin har många verksamheter fått en
-                            snabb nedgång av antalet gäster. För att om möjligt
-                            lindra de negativa effekterna som virusets spridning
-                            har på verksamheterna i Borås, beslutade Miljö- och
-                            konsumentnämnden igår att du som red...</p
-                        >
-                        <p class="articleDetail"
-                            >Publicerad den 30 september 2020</p
-                        >
+                        >Förlängt serveringstillstånd på uteserveringar</h3
+                    >
+                    <p class="articleBody"
+                        >Under coronapandemin har många verksamheter fått en
+                        snabb nedgång av antalet gäster. För att om möjligt
+                        lindra de negativa effekterna som virusets spridning
+                        har på verksamheterna i Borås, beslutade Miljö- och
+                        konsumentnämnden igår att du som red...</p
+                    >
+                    <p class="articleDetail"
+                        >Publicerad den 30 september 2020</p
+                    >
+                     </div>
                     </li>
                 </ul>
                 <div class="btnHolder">
@@ -292,78 +301,82 @@
                 </div>
             </section>
         </div>
+     </div>
 		<footer>
-			<div class="footerHeader">
-				<img class="logo" src="./assets/logo.png" alt="logo" />
-				<h1>Borås stad</h1>
-				<div class="footerTop">
-					<ul>
-						<li
-							><b>Telefon</b> <br />
-							<p>Växel: 033-35 70 00</p></li
-						>
-						<li
-							><b>Öppetider</b><br />
-							<p
-								>Måndag–torsdag: <br />
-								7.30–17.00 <br />
-								Fredag: 07.30-16.00</p
-							>
-						</li>
-						<li
-							>Öppettider vid helger <br />
-							Journummer när växeln är stängd</li
-						>
-						<li
-							><b>E-post</b><br />
-							<p>boras.stad@boras.se</p></li
-						>
-						<li
-							><b>Postadress</b> <br />
-							Borås Stad <br />
-							501 80 Borås</li
-						>
-						<li
-							><b>Besök oss:</b> <br />
-							Stadshuset: Kungsgatan 55</li
-						>
-						<li>Kontaktinformation till våra verksamheter</li>
-						<li>Karta</li>
-					</ul>
-					<ul>
-						<li class="footerIcon"
-							><b>Borås Stad u sociala medier</b> <br />
-							<i class="fa fa-facebook" aria-hidden="true"></i>
-							<i class="fa fa-twitter" aria-hidden="true"></i>
-							<i
-								class="fa fa-instagram"
-								aria-hidden="true"
-							></i>
-							<i class="fa fa-youtube" aria-hidden="true"></i>
-							<i class="fa fa-linkedin" aria-hidden="true"></i>
-						</li>
-						<li>Våra verksamheter på sociala medier</li>
-						<li
-							><b>Ingångssidor :</b> <br />
-							<a href="">För press och media</a>
-							<a href="">För förtroendevalda</a>
-							<a href="">För anställda</a>
-						</li>
-						<li>
-							<b>Webbplatsen och personuppgifter</b> <br />
-							<a href="">Om webbplatsen</a><br />
-							<a href="">Tillgänglighet på webbplatsen</a
-							><br />
-							<a href="">Hantering av personuppgifter</a>
-						</li>
-						<li>Lämna synpunkt eller felanmälan</li>
-						<li
-							><b>Organisationsnummer</b> <br />
-							212000-1561
-						</li>
-					</ul>
-				</div>
-			</div>
+            <div class="footerContent">
+                <div class="footerHeader">
+                    <img class="logo" src="./assets/logo.png" alt="logo" />
+                    <h1>Borås stad</h1>
+                </div>
+                    <div class="footerTop">
+                        <ul>
+                            <li
+                                ><b>Telefon</b> <br />
+                                <p>Växel: 033-35 70 00</p></li
+                            >
+                            <li
+                                ><b>Öppetider</b><br />
+                                <p
+                                    >Måndag–torsdag: <br />
+                                    7.30–17.00 <br />
+                                    Fredag: 07.30-16.00</p
+                                >
+                            </li>
+                            <li
+                                >Öppettider vid helger <br />
+                                Journummer när växeln är stängd</li
+                            >
+                            <li
+                                ><b>E-post</b><br />
+                                <p>boras.stad@boras.se</p></li
+                            >
+                            <li
+                                ><b>Postadress</b> <br />
+                                Borås Stad <br />
+                                501 80 Borås</li
+                            >
+                            <li
+                                ><b>Besök oss:</b> <br />
+                                Stadshuset: Kungsgatan 55</li
+                            >
+                            <li>Kontaktinformation till våra verksamheter</li>
+                            <li>Karta</li>
+                        </ul>
+                        <ul>
+                            <li class="footerIcon"
+                                ><b>Borås Stad u sociala medier</b> <br />
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                                <i
+                                    class="fa fa-instagram"
+                                    aria-hidden="true"
+                                ></i>
+                                <i class="fa fa-youtube" aria-hidden="true"></i>
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            </li>
+                            <li>Våra verksamheter på sociala medier</li>
+                            <li
+                                ><b>Ingångssidor :</b> <br />
+                                <a href="">För press och media</a><br>
+                                <a href="">För förtroendevalda</a><br>
+                                <a href="">För anställda</a>
+                            </li>
+                            <li>
+                                <b>Webbplatsen och personuppgifter</b> <br />
+                                <a href="">Om webbplatsen</a><br />
+                                <a href="">Tillgänglighet på webbplatsen</a
+                                ><br />
+                                <a href="">Hantering av personuppgifter</a>
+                            </li>
+                            <li>Lämna synpunkt eller felanmälan</li>
+                            <li
+                                ><b>Organisationsnummer</b> <br />
+                                212000-1561
+                            </li>
+                        </ul>
+                    </div>
+            </div>
+			
 		</footer>
 	</body>
 	<script src="https://use.fontawesome.com/febc262783.js"></script>
