change sass directory name

--- a/foretagare.html
+++ b/foretagare.html
@@ -7,11 +7,11 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Foretagare</title>
-		<link rel="stylesheet" type="text/css" href="./sass/home.css" />
+		<link rel="stylesheet" type="text/css" href="./style/home.css" />
 		<link
 			rel="stylesheet"
 			type="text/css"
-			href="./sass/foretagare.css"
+			href="./style/foretagare.css"
 		/>
 	</head>
 	<body>
