--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Home</title>
-		<link rel="stylesheet" type="text/css" href="./sass/home.css" />
+		<link rel="stylesheet" type="text/css" href="./style/home.css" />
 	</head>
 	<body>
 		<main>
